# blackboxai-1744334755151

./: .dockerignore  .env.prod.example  DEPLOYMENT.md  Dockerfile  PRODUCTION_FIXES.md  README.md  docker-compose.prod.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/core/: settings.py
app/integrations/: multimodal.py
app/middleware/: rate_limiter.py  security_middleware.py
app/routers/: analytics.py  monitoring.py  users.py
